[project]
name = "chatbot-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.24.0",
    "fastapi>=0.116.1",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.0",
    "openai>=1.97.1",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
